- Fix Navigation problem - Switch to pivot

--- a/Cafeine/Cafeine/App.xaml
+++ b/Cafeine/Cafeine/App.xaml
@@ -10,10 +10,17 @@
              RequestedTheme="Light">
 
     <Application.Resources>
-        
-        <!--Global View Model Locator-->
-        <vm:ViewModelLocator x:Key="Locator"
-                             d:IsDataSource="True" />
-        
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Generic.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <!--Global View Model Locator-->
+            <vm:ViewModelLocator x:Key="Locator"
+                d:IsDataSource="True" />
+
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
