--- a/Cafeine/Cafeine/View/View_Resource/DIrectoryTemplate.xaml
+++ b/Cafeine/Cafeine/View/View_Resource/DIrectoryTemplate.xaml
@@ -54,7 +54,7 @@
                        MaxLines="2"
                        VerticalAlignment="Center"
                        FontWeight="SemiBold"
-                       FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf#Montserrat SemiBold"
+                       FontFamily="ms-appx:/Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf#Montserrat"
                        CharacterSpacing="16"/>
         </Grid>
     </DataTemplate>
