--- a/Cafeine/Cafeine/View/RSSFeedPage.xaml
+++ b/Cafeine/Cafeine/View/RSSFeedPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Cafeine.TorrentManager"
+    x:Class="Cafeine.RSSFeed"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
