--- a/Cafeine/App.xaml
+++ b/Cafeine/App.xaml
@@ -4,5 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
     xmlns:prismUnity="using:Prism.Unity.Windows">
-
+    <prismUnity:PrismUnityApplication.Resources>
+        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+    </prismUnity:PrismUnityApplication.Resources>
 </prismUnity:PrismUnityApplication>
