--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -98,7 +98,7 @@
                     ItemContainerStyle="{StaticResource AutoSuggestBoxItemContainerStyle}"
                     ItemTemplate="{StaticResource SuggestItemTemplate}"
                     ItemsSource="{x:Bind Path=Vm.SuggestItemSource, Mode=OneWay}"
-                    PlaceholderText="Search..."
+                    PlaceholderText="Search"
                     Style="{StaticResource ModifiedAutoSuggestBox}"
                     Text="{x:Bind Path=Vm.SuggestText.Value, Mode=TwoWay}"
                     UpdateTextOnSelect="False">
