- Change the icon for general button into avatar icon for better UI - Fix : Images on collection list will store the old images for a moment, then blinks for a moment when navigating between tabs

--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -117,9 +117,12 @@
                     IsCompact="True"
                     LabelPosition="Collapsed"
                     Style="{StaticResource ReducedAppBarButtonRevealStyle}">
-                    <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xe13d;" />
-                    </AppBarButton.Icon>
+                    <AppBarButton.Content>
+                        <Ellipse
+                            Width="2"
+                            Height="2"
+                            Fill="Yellow" />
+                    </AppBarButton.Content>
                     <AppBarButton.Flyout>
                         <MenuFlyout>
                             <MenuFlyoutItem>
