--- a/Cafeine/Views/MainPage.xaml
+++ b/Cafeine/Views/MainPage.xaml
@@ -42,8 +42,9 @@
             ContainerContentChanging="Collection_ContainerContentChanging"
             IsItemClickEnabled="True"
             ItemContainerStyle="{StaticResource CollectionItemContainerStyle}"
+            ItemContainerTransitions="{x:Null}"
             ItemTemplate="{StaticResource Collection}"
-            ItemsSource="{x:Bind Vm.Library, Mode=OneWay}">
+            ItemsSource="{x:Bind Vm.Library, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <interactivity:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="ItemClick">
                     <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.ItemClicked}">
